force-app/main/default/objects/RequestSubCategory_mdt__mdt/RequestSubCategory_mdt__mdt.object-meta.xml
<CustomObject>
    <description>販売で使用</description>
    <label>小カテゴリ</label>
</CustomObject>