force-app/main/default/objects/RequestSubCategory_mdt__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>販売で使用</description>
    <label>有効</label>
    <type>Checkbox</type>
</CustomField>