force-app/main/default/objects/RequestSubCategory_mdt__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>販売で使用</description>
    <label>大カテゴリ</label>
    <referenceTo>RequestCategory_mdt__mdt</referenceTo>
    <relationshipLabel>小カテゴリ</relationshipLabel>
    <relationshipName>Category_in_detail</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>