force-app/main/default/objects/RequestSubCategory_mdt__mdt/fields/Category_detail__c.field-meta.xml
<CustomField>
    <fullName>Category_detail__c</fullName>
    <description>販売で使用</description>
    <label>カテゴリ詳細</label>
    <length>255</length>
    <type>Text</type>
</CustomField>